--- a/package.json
+++ b/package.json
@@ -2,19 +2,30 @@
   "name": "kickoff-graqhql-server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "develop": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "develop": "nodemon index.js",
+    "lint": "prettier --write src/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "graphql-yoga": "^1.3.2",
     "mongoose": "^5.0.6"
   },
   "devDependencies": {
-    "nodemon": "^1.15.0"
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "nodemon": "^1.15.0",
+    "prettier": "^1.10.2"
   }
 }
