--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "nodemon --exec babel-node -- ./src/index.js",
     "eslint": "eslint --fix --ext .jsx,.js ./src/**",
-    "build": "node ./src/build-emails.js",
+    "build-email": "node ./src/build-emails.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "husky": {
@@ -32,6 +33,7 @@
     "dotenv": "^16.0.2",
     "email-templates": "^10.0.1",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mjml": "^4.13.0",
@@ -46,6 +48,8 @@
     "@babel/node": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "@graphql-eslint/eslint-plugin": "^3.11.2",
+    "babel-plugin-graphql-tag": "^3.3.0",
+    "babel-plugin-import-graphql": "^2.8.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
