--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,7 @@
-/.next
-/node_modules
-/.vscode
-/static
-/public
+./node_modules
+./.vscode
+./dist
 yarn.lock
 package-lock.json
 **/*.test.js
+./src/templates
